--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Oak</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <canvas id="canvas" style="background-image: linear-gradient(to top,#eb6e4f, #7275ff);
+    }"></canvas>
   </body>
+  <script src="./background.js" type="text/javascript"></script>
 </html>
