--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </noscript>
     <div id="root"></div>
     <canvas id="canvas" style="background-image: linear-gradient(to top,#eb6e4f, #7275ff);
-    }"></canvas>
+    "></canvas>
   </body>
   <script src="./background.js" type="text/javascript"></script>
 </html>
